2008-05-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added the ability to reuse connection in FTP and it is enabled by
	default. It can be disabled by --ftp-reuse-connection=false option.
	* src/Command.cc
	* src/DownloadCommand.cc
	* src/FtpDownloadCommand.cc
	* src/FtpDownloadCommand.h
	* src/FtpFinishDownloadCommand.cc
	* src/FtpFinishDownloadCommand.h
	* src/FtpInitiateConnectionCommand.cc
	* src/FtpNegotiationCommand.cc
	* src/FtpNegotiationCommand.h
	* src/HelpItemFactory.cc
	* src/Makefile.am
	* src/Makefile.in
	* src/OptionHandlerFactory.cc
	* src/option_processing.cc
	* src/prefs.h
	* src/usage_text.h

2008-05-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Call Command::transitStatus() before calling Command::execute(),
	so that the status change made in execute() is not cleared.
	* src/DownloadEngine.cc

2008-05-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Removed forward declaration of SocketCore class.
	* src/HttpDownloadCommand.h
	
2008-05-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Set Request::setKeepAliveHint() and Request::setPipeliningHint()
	in InitiateConnectionCommandFactory. They should be set only when
	the protocol is HTTP or HTTPS.
	* src/InitiateConnectionCommandFactory.cc
	* src/RequestGroup.cc

2008-05-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed infinite loop in checksum checking.
	* src/IteratableChecksumValidator.cc

2008-05-08  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Set _supportsPersistentConnection to true by default.
	* src/Request.cc
	* src/RequestGroup.cc
	* test/HttpRequestTest.cc
	* test/RequestTest.cc

2008-05-08  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added timeout to socket pool. The default timeout is 15 seconds,
	which is the same value Apache uses.
	* src/DownloadEngine.cc
	* src/DownloadEngine.h

2008-05-08  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed misuse of multimap::find()
	* src/HttpHeader.cc