@@ -123,7 +123,7 @@ Option* createDefaultOption()
   op->put(PREF_CONTINUE, V_FALSE);
   op->put(PREF_USER_AGENT, "aria2");
   op->put(PREF_NO_NETRC, V_FALSE);
-  op->put(PREF_MAX_CONCURRENT_DOWNLOADS, "5");
+  op->put(PREF_MAX_CONCURRENT_DOWNLOADS, "1");
   op->put(PREF_DIRECT_DOWNLOAD_TIMEOUT, "300");
   op->put(PREF_FORCE_SEQUENTIAL, V_FALSE);
   op->put(PREF_AUTO_FILE_RENAMING, V_TRUE);
